--- a/src/output.css
+++ b/src/output.css
@@ -729,6 +729,30 @@ video {
   height: 100vh;
 }
 
+.h-\[25\%\] {
+  height: 25%;
+}
+
+.h-\[35\%\] {
+  height: 35%;
+}
+
+.h-\[10\%\] {
+  height: 10%;
+}
+
+.h-\[15\%\] {
+  height: 15%;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[12\%\] {
+  height: 12%;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -763,6 +787,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .max-w-7xl {
@@ -845,6 +873,23 @@ video {
 
 .gap-\[10\%\] {
   gap: 10%;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-x-20 {
+  -moz-column-gap: 5rem;
+       column-gap: 5rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -967,6 +1012,14 @@ video {
 
 .bg-mainBG-6 {
   background-image: url('./img/main-bg-6.png');
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-top {
+  background-position: top;
 }
 
 .bg-no-repeat {
@@ -1114,6 +1167,24 @@ video {
   line-height: 1.25rem;
 }
 
+.text-\[100px\] {
+  font-size: 100px;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[50\%\] {
+  font-size: 50%;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -1165,6 +1236,15 @@ video {
 .text-rose-400 {
   --tw-text-opacity: 1;
   color: rgb(251 113 133 / var(--tw-text-opacity, 1));
+}
+
+.text-rose-700 {
+  --tw-text-opacity: 1;
+  color: rgb(190 18 60 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\] {
+  color: ;
 }
 
 .opacity-0 {
@@ -1359,6 +1439,26 @@ video {
     display: none;
   }
 
+  .sm\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .sm\:h-\[100\] {
+    height: 100;
+  }
+
+  .sm\:h-screen {
+    height: 100vh;
+  }
+
+  .sm\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .sm\:w-\[40\%\] {
+    width: 40%;
+  }
+
   .sm\:items-stretch {
     align-items: stretch;
   }
@@ -1381,11 +1481,130 @@ video {
   .sm\:pr-0 {
     padding-right: 0px;
   }
+
+  .sm\:text-\[200px\] {
+    font-size: 200px;
+  }
+
+  .sm\:text-\[120px\] {
+    font-size: 120px;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:text-\[200px\] {
+    font-size: 200px;
+  }
+
+  .md\:text-\[10px\] {
+    font-size: 10px;
+  }
+
+  .md\:text-\[150px\] {
+    font-size: 150px;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:max-w-5xl {
+    max-width: 64rem;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .lg\:pt-\[\] {
+    padding-top: ;
+  }
+
+  .lg\:pt-\[5\%\] {
+    padding-top: 5%;
+  }
+
+  .lg\:text-\[200px\] {
+    font-size: 200px;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:max-w-7xl {
+    max-width: 80rem;
+  }
+
+  .xl\:pt-\[15\%\] {
+    padding-top: 15%;
+  }
+
+  .xl\:text-\[250px\] {
+    font-size: 250px;
+  }
+
+  .xl\:text-\[200px\] {
+    font-size: 200px;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:text-\[250px\] {
+    font-size: 250px;
+  }
+
+  .\32xl\:text-rose-400 {
+    --tw-text-opacity: 1;
+    color: rgb(251 113 133 / var(--tw-text-opacity, 1));
   }
 }
