--- a/src/output.css
+++ b/src/output.css
@@ -2687,6 +2687,16 @@ video {
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity, 1));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -3359,6 +3369,14 @@ video {
 
   .lg\:h-\[100\%\] {
     height: 100%;
+  }
+
+  .lg\:h-\[60\%\] {
+    height: 60%;
+  }
+
+  .lg\:h-\[50\%\] {
+    height: 50%;
   }
 
   .lg\:items-center {
