--- a/src/output.css
+++ b/src/output.css
@@ -627,6 +627,22 @@ video {
   z-index: 20;
 }
 
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -686,6 +702,10 @@ video {
 
 .inline-flex {
   display: inline-flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -801,6 +821,14 @@ video {
   height: 80%;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[70\%\] {
+  height: 70%;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -865,6 +893,22 @@ video {
   width: 40%;
 }
 
+.w-\[50\] {
+  width: 50;
+}
+
+.w-\[8\] {
+  width: 8;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[48\%\] {
+  width: 48%;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -899,6 +943,14 @@ video {
   animation: marquee 32s linear infinite;
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -929,6 +981,10 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .gap-x-20 {
@@ -1047,6 +1103,21 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
 .bg-banner {
   background-image: url('./img/banner.png');
 }
@@ -1065,6 +1136,26 @@ video {
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-top {
+  background-position: top;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-bottom {
+  background-position: bottom;
+}
+
+.bg-right {
+  background-position: right;
 }
 
 .bg-no-repeat {
@@ -1533,6 +1624,10 @@ video {
     margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:bg-cover {
+    background-size: cover;
+  }
+
   .md\:bg-top {
     background-position: top;
   }
@@ -1557,6 +1652,10 @@ video {
     display: block;
   }
 
+  .lg\:inline-block {
+    display: inline-block;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1577,6 +1676,18 @@ video {
     height: 80%;
   }
 
+  .lg\:h-\[\%\] {
+    height: %;
+  }
+
+  .lg\:h-\[60\%\] {
+    height: 60%;
+  }
+
+  .lg\:h-screen {
+    height: 100vh;
+  }
+
   .lg\:w-\[100\%\] {
     width: 100%;
   }
@@ -1587,6 +1698,14 @@ video {
 
   .lg\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .lg\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .lg\:w-screen {
+    width: 100vw;
   }
 
   .lg\:items-center {
