--- a/src/output.css
+++ b/src/output.css
@@ -578,10 +578,6 @@ video {
   position: relative;
 }
 
-.-inset-0\.5 {
-  inset: -0.125rem;
-}
-
 .-inset-1\.5 {
   inset: -0.375rem;
 }
@@ -627,10 +623,6 @@ video {
   z-index: 20;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -639,13 +631,45 @@ video {
   grid-column: span 6 / span 6;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
+.col-span-7 {
+  grid-column: span 7 / span 7;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .me-\[5\%\] {
@@ -656,36 +680,8 @@ video {
   margin-inline-start: auto;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
 }
 
 .block {
@@ -745,16 +741,24 @@ video {
   height: 100%;
 }
 
-.h-\[120px\] {
-  height: 120px;
-}
-
 .h-\[15\%\] {
   height: 15%;
 }
 
+.h-\[25\%\] {
+  height: 25%;
+}
+
+.h-\[3\%\] {
+  height: 3%;
+}
+
 .h-\[30\%\] {
   height: 30%;
+}
+
+.h-\[40\%\] {
+  height: 40%;
 }
 
 .h-\[400px\] {
@@ -769,64 +773,84 @@ video {
   height: 50%;
 }
 
+.h-\[6\%\] {
+  height: 6%;
+}
+
 .h-\[60\%\] {
   height: 60%;
+}
+
+.h-\[80px\] {
+  height: 80px;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-\[\] {
-  height: ;
+.h-full {
+  height: 100%;
 }
 
-.h-\[20\%\] {
-  height: 20%;
+.h-\[900px\] {
+  height: 900px;
 }
 
-.h-\[100\%\%\] {
-  height: 100%%;
+.h-\[full\] {
+  height: full;
 }
 
-.h-\[40\%\] {
-  height: 40%;
+.h-\[screen\] {
+  height: screen;
 }
 
-.h-\[\%\] {
-  height: %;
+.h-\[600px\] {
+  height: 600px;
 }
 
-.h-\[5\%\] {
-  height: 5%;
+.h-\[2\%\] {
+  height: 2%;
 }
 
-.h-\[25\%\] {
-  height: 25%;
+.h-\[4\%\] {
+  height: 4%;
 }
 
-.h-\[8\%\] {
-  height: 8%;
+.h-\[700px\] {
+  height: 700px;
 }
 
-.h-\[7\%\] {
-  height: 7%;
+.max-h-\[700px\] {
+  max-height: 700px;
 }
 
-.h-\[3\%\] {
-  height: 3%;
+.max-h-\[\] {
+  max-height: ;
 }
 
-.h-\[80\%\] {
-  height: 80%;
+.max-h-\[900px\] {
+  max-height: 900px;
 }
 
-.h-1 {
-  height: 0.25rem;
+.max-h-\[375\] {
+  max-height: 375;
 }
 
-.h-\[70\%\] {
-  height: 70%;
+.max-h-\[300px\] {
+  max-height: 300px;
+}
+
+.max-h-\[350px\] {
+  max-height: 350px;
+}
+
+.max-h-\[370px\] {
+  max-height: 370px;
+}
+
+.max-h-\[400px\] {
+  max-height: 400px;
 }
 
 .w-32 {
@@ -853,6 +877,10 @@ video {
   width: 55%;
 }
 
+.w-\[75\%\] {
+  width: 75%;
+}
+
 .w-auto {
   width: auto;
 }
@@ -861,52 +889,8 @@ video {
   width: 100vw;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
-}
-
-.w-\[\%\] {
-  width: %;
-}
-
-.w-\[80\%\] {
-  width: 80%;
-}
-
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[50\] {
-  width: 50;
-}
-
-.w-\[8\] {
-  width: 8;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[48\%\] {
-  width: 48%;
+.w-full {
+  width: 100%;
 }
 
 .max-w-7xl {
@@ -943,16 +927,8 @@ video {
   animation: marquee 32s linear infinite;
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -979,12 +955,12 @@ video {
   justify-content: space-between;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-x-20 {
@@ -1002,6 +978,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1022,28 +1004,14 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-x-40 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(10rem * var(--tw-space-x-reverse));
-  margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-x-hidden {
@@ -1052,6 +1020,10 @@ video {
 
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-3xl {
@@ -1066,12 +1038,18 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .border-l-4 {
   border-left-width: 4px;
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
 }
 
 .bg-lightGray {
@@ -1079,9 +1057,19 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
 .bg-rose-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 113 133 / var(--tw-bg-opacity, 1));
+}
+
+.bg-sky-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-400 {
@@ -1098,24 +1086,9 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
-.bg-gray-200 {
+.bg-indigo-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+  background-color: rgb(129 140 248 / var(--tw-bg-opacity, 1));
 }
 
 .bg-banner {
@@ -1142,16 +1115,12 @@ video {
   background-size: contain;
 }
 
-.bg-top {
-  background-position: top;
+.bg-auto {
+  background-size: auto;
 }
 
 .bg-center {
   background-position: center;
-}
-
-.bg-bottom {
-  background-position: bottom;
 }
 
 .bg-right {
@@ -1177,6 +1146,16 @@ video {
      object-fit: fill;
 }
 
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -1187,6 +1166,26 @@ video {
 
 .p-\[5\%\] {
   padding: 5%;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
+.p-52 {
+  padding: 13rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-32 {
+  padding: 8rem;
 }
 
 .px-2 {
@@ -1207,6 +1206,11 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .pb-20 {
@@ -1261,8 +1265,12 @@ video {
   padding-top: 30%;
 }
 
-.pt-\[30px\] {
-  padding-top: 30px;
+.pt-\[10\%\] {
+  padding-top: 10%;
+}
+
+.pt-\[0\%\] {
+  padding-top: 0%;
 }
 
 .font-krona {
@@ -1281,6 +1289,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -1302,10 +1315,6 @@ video {
   font-size: 144px;
 }
 
-.text-\[40px\] {
-  font-size: 40px;
-}
-
 .text-\[70px\] {
   font-size: 70px;
 }
@@ -1313,11 +1322,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -1338,11 +1342,6 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -1353,7 +1352,7 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.text-neutral-100 {
+.text-lightGray {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity, 1));
 }
@@ -1368,18 +1367,12 @@ video {
   color: rgb(251 113 133 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
-}
-
-.text-lightGray {
-  --tw-text-opacity: 1;
-  color: rgb(245 245 245 / var(--tw-text-opacity, 1));
-}
-
 .opacity-65 {
   opacity: 0.65;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .shadow {
@@ -1562,36 +1555,32 @@ video {
     margin-bottom: 5rem;
   }
 
-  .md\:h-\[\] {
-    height: ;
+  .md\:mb-1 {
+    margin-bottom: 0.25rem;
   }
 
-  .md\:h-\[3\%\] {
-    height: 3%;
+  .md\:mb-16 {
+    margin-bottom: 4rem;
   }
 
   .md\:h-\[20\%\] {
     height: 20%;
   }
 
-  .md\:h-\[10\%\] {
-    height: 10%;
+  .md\:max-h-\[\] {
+    max-height: ;
   }
 
-  .md\:h-\[8\%\] {
-    height: 8%;
+  .md\:max-h-\[7\] {
+    max-height: 7;
   }
 
-  .md\:h-\[\%\] {
-    height: %;
+  .md\:max-h-\[700px\] {
+    max-height: 700px;
   }
 
-  .md\:h-\[5\%\] {
-    height: 5%;
-  }
-
-  .md\:h-\[15\%\] {
-    height: 15%;
+  .md\:w-\[80\%\] {
+    width: 80%;
   }
 
   .md\:space-y-5 > :not([hidden]) ~ :not([hidden]) {
@@ -1600,36 +1589,14 @@ video {
     margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
   }
 
-  .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-y-10 > :not([hidden]) ~ :not([hidden]) {
+  .md\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
-    margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-  }
-
-  .md\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(5rem * var(--tw-space-x-reverse));
-    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
   }
 
   .md\:bg-cover {
     background-size: cover;
-  }
-
-  .md\:bg-top {
-    background-position: top;
   }
 
   .md\:text-2xl {
@@ -1648,90 +1615,33 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+
+  .lg\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .lg\:block {
     display: block;
-  }
-
-  .lg\:inline-block {
-    display: inline-block;
-  }
-
-  .lg\:flex {
-    display: flex;
   }
 
   .lg\:hidden {
     display: none;
   }
 
-  .lg\:h-\[200px\] {
-    height: 200px;
-  }
-
-  .lg\:h-\[100\%\] {
-    height: 100%;
-  }
-
-  .lg\:h-\[80\%\] {
-    height: 80%;
-  }
-
-  .lg\:h-\[\%\] {
-    height: %;
-  }
-
-  .lg\:h-\[60\%\] {
-    height: 60%;
-  }
-
-  .lg\:h-screen {
-    height: 100vh;
-  }
-
-  .lg\:w-\[100\%\] {
-    width: 100%;
-  }
-
-  .lg\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .lg\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .lg\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .lg\:w-screen {
-    width: 100vw;
+  .lg\:w-\[60\%\] {
+    width: 60%;
   }
 
   .lg\:items-center {
     align-items: center;
   }
 
-  .lg\:justify-center {
-    justify-content: center;
-  }
-
-  .lg\:rounded-2xl {
-    border-radius: 1rem;
-  }
-
-  .lg\:object-cover {
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .lg\:pt-\[25px\] {
-    padding-top: 25px;
   }
 
   .lg\:pt-\[5\%\] {
@@ -1743,17 +1653,19 @@ video {
     line-height: 2rem;
   }
 
-  .lg\:text-7xl {
-    font-size: 4.5rem;
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
     line-height: 1;
   }
 
-  .lg\:text-\[100px\] {
-    font-size: 100px;
-  }
-
-  .lg\:text-\[180px\] {
-    font-size: 180px;
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 
   .lg\:text-\[160px\] {
