--- a/src/output.css
+++ b/src/output.css
@@ -566,6 +566,10 @@ video {
   border-width: 0;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -580,6 +584,10 @@ video {
 
 .-inset-1\.5 {
   inset: -0.375rem;
+}
+
+.inset-auto {
+  inset: auto;
 }
 
 .inset-y-0 {
@@ -605,6 +613,50 @@ video {
 
 .top-\[calc\(50\%-27px\)\] {
   top: calc(50% - 27px);
+}
+
+.start-0 {
+  inset-inline-start: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.top-\[1\/2\] {
+  top: 1/2;
+}
+
+.top-\[c1\/2\] {
+  top: c1/2;
+}
+
+.top-\[calc1\/2\] {
+  top: calc1/2;
+}
+
+.top-\[calc\(\)1\/2\] {
+  top: calc()1/2;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
+.right-14 {
+  right: 3.5rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
+.top-\[20px\] {
+  top: 20px;
+}
+
+.top-5 {
+  top: 1.25rem;
 }
 
 .z-20 {
@@ -638,6 +690,22 @@ video {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.ms-5 {
+  margin-inline-start: 1.25rem;
+}
+
+.me-5 {
+  margin-inline-end: 1.25rem;
+}
+
+.me-3 {
+  margin-inline-end: 0.75rem;
 }
 
 .block {
@@ -741,6 +809,14 @@ video {
   height: 1.75rem;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -775,6 +851,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-9 {
+  width: 2.25rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .max-w-7xl {
@@ -821,6 +913,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1030,6 +1126,10 @@ video {
   padding-top: 6%;
 }
 
+.pr-0 {
+  padding-right: 0px;
+}
+
 .font-krona {
   font-family: KronaOne-Regular, sans-serif;
 }
@@ -1108,6 +1208,11 @@ video {
 .text-subPurple {
   --tw-text-opacity: 1;
   color: rgb(140 171 251 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 .opacity-80 {
