--- a/src/input.css
+++ b/src/input.css
@@ -10,6 +10,14 @@
     font-style: normal;
   }
 
+  @font-face {
+    font-family: 'LibreBodoni-Regular';
+    src: url('./fonts/LibreBodoni-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+  }
+
 
 @font-face {
     font-family: 'KronaOne-Regular';
