fix nav ig icon

--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .fixed {
   position: fixed;
 }
@@ -599,6 +603,46 @@ video {
   top: calc(50% - 27px);
 }
 
+.end-5 {
+  inset-inline-end: 1.25rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-14 {
+  bottom: 3.5rem;
+}
+
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.end-8 {
+  inset-inline-end: 2rem;
+}
+
+.end-12 {
+  inset-inline-end: 3rem;
+}
+
+.end-16 {
+  inset-inline-end: 4rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -617,6 +661,10 @@ video {
 
 .m-6 {
   margin: 1.5rem;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -762,6 +810,14 @@ video {
   height: %;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .max-h-\[100px\] {
   max-height: 100px;
 }
@@ -808,6 +864,18 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .max-w-6xl {
@@ -919,6 +987,10 @@ video {
 
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .whitespace-nowrap {
@@ -1262,6 +1334,10 @@ video {
   font-style: normal;
 }
 
+.hover\:w-12:hover {
+  width: 3rem;
+}
+
 .hover\:rounded-xl:hover {
   border-radius: 0.75rem;
 }
@@ -1281,6 +1357,16 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-mainYellow:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 251 113 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-subPurple:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 171 251 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-mainYellow:hover {
   --tw-text-opacity: 1;
   color: rgb(212 251 113 / var(--tw-text-opacity, 1));
@@ -1289,6 +1375,11 @@ video {
 .hover\:text-subPurple:hover {
   --tw-text-opacity: 1;
   color: rgb(140 171 251 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-lightGray:hover {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 245 / var(--tw-text-opacity, 1));
 }
 
 .focus\:rounded-xl:focus {
@@ -1381,6 +1472,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:visible {
+    visibility: visible;
+  }
+
+  .md\:fixed {
+    position: fixed;
+  }
+
   .md\:top-28 {
     top: 7rem;
   }
@@ -1391,6 +1490,10 @@ video {
 
   .md\:mb-8 {
     margin-bottom: 2rem;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:h-\[100\%\] {
